feat: global search api
